argcd-apps/oauth2-proxy-test-express/rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oauth2-proxy-test
