argcd-apps/oauth2-proxy-test-express/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: oauth2-proxy-test
  namespace: oauth2-proxy-test
  labels:
    app.kubernetes.io/name: oauth2-proxy
    app.kubernetes.io/instance: oauth2-proxy-test
spec:
  host: test-express-app.apps-crc.testing
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: oauth2-proxy-test
    weight: 100
  wildcardPolicy: None
